@@ -1,0 +1,3 @@
+%(a => 'apple', c => 'cats', b => 'bats')
+@('a', 'c', 'b')
+@('apple', 'cats', 'bats')
